--- a/homework3/src/app/app.component.html
+++ b/homework3/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-body>
+    <router-outlet></router-outlet>
+</app-body>
+<app-footer></app-footer>
