--- a/homework3/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/homework3/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,2 +1,6 @@
-<p>dashboard-page works!</p>
-<p-button (click)="logOut()">Çıkış Yap</p-button>
+<div class="container">
+    <div class="header-group">
+        <h1 class="header">Welcome to dashboard.</h1>
+        <h3 class="subheader">This is just a demo app.</h3>
+    </div>
+</div>
