--- a/homework3/src/app/components/login-card/login-card.component.html
+++ b/homework3/src/app/components/login-card/login-card.component.html
@@ -1,19 +1,22 @@
-<p-card header="Login" styleClass="card">
+<div class="card">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <p-message *ngIf="showWrongCredentialsMessageBox" styleClass="form-message" severity="error" text="Wrong username/password combination"></p-message>
+        <h1 class="form-title">Login</h1>
+        <app-message *ngIf="this.showWrongCredentialsMessageBox"></app-message>
+        <div *ngIf="showWrongCredentialsMessageBox" ></div>
         <div class="username-item">
-            <label for="username-input">Username*</label>
-            <input id="username-input" class="input-element" pInputText type="text" formControlName="username" autocomplete="off">
+            <label class="input-title" for="username-input">Username*</label>
+            <input id="username-input" [ngClass]="{'input-element':true, 'input-element-error':this.loginForm.get('username').errors != null && this.loginForm.get('username').touched == true}" type="text" formControlName="username" autocomplete="off" placeholder="Enter your username">
             <small class="input-error" *ngIf="this.loginForm.get('username').errors?.['required'] != null && this.loginForm.get('username').touched == true"> This field is required. </small>
         </div>
         <div class="password-item">
-            <label for="password-input">Password*</label>
-            <input id="password-input" class="input-element" pInputText type="password" formControlName="password">
+            <label class="input-title" for="password-input">Password*</label>
+            <input id="password-input" [ngClass]="{'input-element':true, 'input-element-error':this.loginForm.get('password').errors != null && this.loginForm.get('password').touched == true}" type="password" formControlName="password" placeholder="Enter your password">
             <small class="input-error" *ngIf="this.loginForm.get('password').errors?.['required'] != null && this.loginForm.get('password').touched == true"> This field is required. </small>
             <small class="input-error" *ngIf="this.loginForm.get('password').errors?.['minlength'] != null && this.loginForm.get('password').touched == true"> Password length has to be at least 6 characters. </small>
         </div>
         <div class="login-button-item">
-            <p-button [disabled]="!this.loginForm.valid" type="submit" label="Login" ></p-button>
+            <input [disabled]="!this.loginForm.valid" type="submit" value="Login" class="submit-button" >
         </div>
     </form>
-</p-card>
+</div>
+
