--- a/homework3/src/app/components/login-card/login-card.component.scss
+++ b/homework3/src/app/components/login-card/login-card.component.scss
@@ -1,30 +1,29 @@
-/*
-    https://stackoverflow.com/questions/40131174/how-do-i-override-the-style-of-primeng-components
-    I couldn't find better solution for styling primeNg components. Idk how the below code works
-*/
-:host{
-    ::ng-deep .card .p-card-header{
-        background-color: #341232;
-    }
-    ::ng-deep .login-button-item .p-button{
-        width: 100%;
-    }
-    ::ng-deep .password-item .password-item{
-        width: 100%;
-    }
-    ::ng-deep .form-message{
-        width: 100%;
-    }
+.card{
+    width: 100%;
+    height: 420px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    box-shadow: 0 2px 6px #b0b0b0;
+    padding : 50px;
 }
 .input-element{
     width: 100%;
+    height: 35px;
+    font-size: 80%;
+    font-weight: 300;
+    padding-left: 8px;
+    border: 1px solid rgb(118,118,118);
+    border-radius: 5px;
+}
+.input-element-error{
+    border: 1px solid #e63946;
 }
 .username-item{
     margin-top: 20px;
     margin-bottom: 30px;
 }
 .login-button-item{
-    margin-top: 20px;;
+    margin-top: 20px;
 }
 .login-button-item .button{
     width: 100%;
@@ -32,6 +31,37 @@
 .password-input{
     display: block;
 }
-.input-error{
-    color: red;
+.input-title{
+    color: #292929;
+    font-size: 90%;
 }
+.input-error{
+    color: #e63946;
+}
+.form-title{
+    color:#373737;
+    margin-bottom: 20px;
+}
+.submit-button{
+    width: 100%;
+    background-color: #3B82F6;
+    border: none;
+    color: #fff;
+    border-radius: 3px;
+    height: 35px;
+    font-size: 90%;
+    letter-spacing: 0.3px;
+    cursor: pointer;
+    transition: background-color 0.1s;
+}
+.submit-button:hover{
+    background-color: #3372d8;
+}
+.submit-button:disabled{
+    background-color: #60646b;
+    cursor: initial;
+}
+.submit-button:active{
+    background-color: #0d3b8b;
+}
+
