--- a/homework3/src/app/pages/login-page/login-page.component.css
+++ b/homework3/src/app/pages/login-page/login-page.component.css
@@ -1,10 +1,12 @@
 .container{
-    margin-top: 10vh;
+    padding-top: 10vh;
     width: 100%;
+    height: 88vh;
 }
 
 .form-card-container{
     width: 40%;
     margin-left: 5%;
     display: inline-block;
+    float: left;
 }
